@@ -1,3 +1,15 @@
+2007-02-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* nscd/nscd_helper.c (open_socket): Minor size optimization.
+
+2007-02-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* include/locale.h (__uselocale): Add libc_hidden_proto.
+	* locale/uselocale.c (__uselocale): Add libc_hidden_def.
+
+	* nscd/nscd_helper.c (open_socket): Use __gettimeofday instead of
+	gettimeofday.
+
 2007-02-01  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/i386/sysdep.h (PTR_MANGLE): Roll value before
